--- a/index.html
+++ b/index.html
@@ -383,15 +383,35 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">DevSecOps Engineer</h4>
+              <h4 class="h4 timeline-item-title">OrderGrid Inc., Toronto, Canada</h4>
+
+              <span>July 2023 — Till Date</span>
+
+              <p class="timeline-text">
+                ● Currently working on a project to rearchitect the company’s AWS structure and segregate Dev, Stage, and Prod environments from scratch. <br>
+                ● Administering technology for the build/deploy pipeline and ensuring proper security controls. <br>
+                ● Assisting in the deployment of application code delivered by the development team, monitoring, assessing, and performing application vulnerability scans. <br>
+                ● Assisting in secure solutions that prepare for the current threat landscape and support ongoing business objectives. <br>
+                ● Working closely with ISS & Engineering teams to review architectural specifications and low-level design documents. <br>
+                ● Proactively identifying security risks and escalating accordingly. <br>
+                ● Updating Protective Monitoring/SOC documentation, processes, and procedures as required.
+              </p>
+
+            </li>
+            
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Research Assistant / Devops Engineer</h4>
               <h4 class="h4 timeline-item-title">York University, Toronto, Canada</h4>
 
               <span>June 2022 — September 2022</span>
 
               <p class="timeline-text">
-                ● Worked as a Backend and Dev-ops Developer on York University’s digital currency project.<br>
-                ● Improved geolocation of the bitcoin miners by using Block-cypher API and filtering out IP Addresses with confirmed transactions and tracing it back to origin bitcoin transaction so that heat map is generated for CO2 emissions from mining and displayed on the website.<br>
-                ● Responsible for automated testing and deployment of the project website.
+                ● Collaborated on infrastructure design and implementation for a digital currency project, focusing on data backup and transformation requirements. <br>
+                ● Enhanced miner geolocation using APIs and integrated mappings on the project website. <br>
+                ● Developed CI/CD pipelines using GitHub Actions, facilitating efficient deployment of Docker container images to AWS EKS and AWS S3. <br>
+                ● Created reusable components for data pipeline frameworks and ensured scalable, redundant, and recoverable production-grade cloud environments.
               </p>
 
             </li>
@@ -404,12 +424,11 @@
               <span>April 2018 — September 2020</span>
 
               <p class="timeline-text">
-                ● Worked under the guidance of 4 lead software engineers, tech leads, and architects.<br>
-                ●	Maintained Git workflows for version control.<br>
-                ●	Developed and maintained automated CI/CD pipelines for code deployment using Jenkins.<br>
-                ●	Built and deployed Docker containers for implementing Microservice Architecture.<br>
-                ●	Provisioned Servers and deployed features using Ansible.<br>
-                ●	Orchestrated Docker container cluster using Docker Swarm.<br>
+                ● Engineered Docker containers to facilitate Microservice Architecture and orchestrated clusters using Docker Swarm. <br>
+                ● Developed automated deployment pipelines utilizing Jenkins and Github Actions. <br>
+                ● Implemented monitoring systems like Datadog and CloudWatch ensuring optimal application performance. <br>
+                ● Collaborated with development teams to optimize the SDLC and enhance deployment efficiency. <br>
+                ● Administered cloud infrastructure on AWS; conducted security assessments; ensured system/data confidentiality, integrity, and availability.
               </p>
 
             </li>
@@ -422,9 +441,9 @@
               <span>March 2017 — March 2018</span>
 
               <p class="timeline-text">
-                ● Lead Frontend Developer for the company's various clients for their web apps and website designing by using ReactJs framework with Html and CSS along with NodeJs.<br>
-                ● Exhibited Leadership skills by leading a group of frontend developers.<br>
-                ● Demonstrated professional presentation and communication skills by demonstrating design ideas to the clients.
+                ● Developed user interfaces utilizing React.js; collaborated with designers for responsive web designs.<br>
+                ● Wrote optimized code adhering to modern JavaScript practices; enhanced web application performance for improved user experience.<br>
+                ● Integrated APIs for backend data retrieval; communicated technical solutions effectively to stakeholders.
               </p>
 
             </li>
