Update Resume and About Me 2025

--- a/index.html
+++ b/index.html
@@ -179,13 +179,14 @@
 
         <section class="about-text">
           <p>
-            I'm an IT Professional and a recent Graduate Student of York University, Toronto, Canada. I'm having more than
-            3 years of experience in professional Web Development and Cyber Security. I enjoy turning complex problems into
-            simple, beautiful and intuitive designs.
+            I'm an IT Professional with over 4 years of experience specializing in Cloud and DevSecOps. I hold Post-Grad Certificates in Backend
+            and Blockchain Development from York University and Cyber Security from Centennial College, Toronto, Canada. My expertise spans
+            professional Web Development, Cyber Security, and implementing security best practices throughout the Software Development Life Cycle.
+            I enjoy turning complex problems into simple, beautiful, and intuitive designs.
           </p>
 
           <p>
-             My recent interests include Blockchain technology and how to use this technology to manage Loyalty rewards and programs.
+            My recent interests include enhancing cloud infrastructure and security using modern DevSecOps practices.
           </p>
         </section>
 
